src/objects/Project__c.object
<CustomObject>
    <description>https://help.getharvest.com/api-v2/projects-api/projects/projects/</description>
    <fields>
        <fullName>Bill_By__c</fullName>
        <description>The method by which the project is invoiced.</description>
        <label>Bill By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Tasks</fullName>
                </value>
                <value>
                    <fullName>People</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_By__c</fullName>
        <description>The method by which the project is budgeted.</description>
        <label>Budget By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>project</fullName>
                    <label>Hours Per Project</label>
                </value>
                <value>
                    <fullName>project_cost</fullName>
                    <label>Total Project Fees</label>
                </value>
                <value>
                    <fullName>task</fullName>
                    <label>Hours Per Task</label>
                </value>
                <value>
                    <fullName>person</fullName>
                    <label>Hours Per Person</label>
                </value>
                <value>
                    <fullName>none</fullName>
                    <label>No Budget</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>The budget in hours for the project when budgeting by time.</description>
        <label>Budget (In Hours)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <description>Client (Account) for the Project</description>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>The code associated with the project.</description>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Budget_Include_Expenses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option for budget of Total Project Fees projects to include tracked expenses.</description>
        <label>Cost Budget Include Expenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Budget__c</fullName>
        <description>The monetary budget for the project when budgeting by money.</description>
        <label>Cost Budget</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ends_On__c</fullName>
        <description>Date the project will end.</description>
        <label>Ends On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <description>The amount you plan to invoice for the project. Only used by fixed-fee projects.</description>
        <label>Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Harvest_Id__c</fullName>
        <description>Will be retrieved and saved here by Harvest API code in the future - no need to set. marking as external id so we can search on it</description>
        <externalId>true</externalId>
        <label>Harvest Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether the project is active or archived.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the project is billable or not.</description>
        <label>Is Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fixed_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the project is a fixed-fee project or not.</description>
        <label>Is Fixed Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Project notes.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notify_When_Over_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether project managers should be notified when the project goes over budget.</description>
        <label>Notify When Over Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Over_Budget_Notification_Date__c</fullName>
        <description>Date of last over budget notification. If none have been sent, this will be null.</description>
        <label>Over Budget Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Over_Budget_Notification_Percentage__c</fullName>
        <description>Percentage value used to trigger over budget email alerts.</description>
        <label>Over Budget Notification Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Hourly_Rate__c</fullName>
        <description>Rate for projects billed by Project Hourly Rate.</description>
        <label>Project Hourly Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Show_Budget_To_All__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to show project budget to all employees. Does not apply to Total Project Fee projects.</description>
        <label>Show Budget To All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Starts_On__c</fullName>
        <description>Date the project was started.</description>
        <label>Starts On</label>
        <type>Date</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Fixed_Fee_Required</fullName>
        <active>true</active>
        <description>Require a value for Fee if the Is Fixed Fee field is checked</description>
        <errorConditionFormula>AND(
Is_Fixed_Fee__c,
ISBLANK(Fee__c)
)</errorConditionFormula>
        <errorDisplayField>Fee__c</errorDisplayField>
        <errorMessage>Fee is required if the Is Fixed Fee field is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Project_Hourly_Rate</fullName>
        <active>true</active>
        <description>Require Project Hourly Rate to be set if Bill By = Hours Per Project</description>
        <errorConditionFormula>AND( 
ISBLANK(Project_Hourly_Rate__c), 
ISPICKVAL(Bill_By__c, &quot;Project&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Project_Hourly_Rate__c</errorDisplayField>
        <errorMessage>Project Hourly Rate is required if the Bill By field = Hours Per Project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_End_Date_Validation</fullName>
        <active>true</active>
        <description>Don&apos;t let the End Date be before the Start Date</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Starts_On__c)),
NOT(ISBLANK(Ends_On__c)),
Starts_On__c &gt; Ends_On__c
)</errorConditionFormula>
        <errorDisplayField>Ends_On__c</errorDisplayField>
        <errorMessage>The End Ons Date must be after the Starts On Date.</errorMessage>
    </validationRules>
</CustomObject>